# routes/authRoutes.js
@@ -5,6 +5,8 @@ const authController = require('../controllers/authController');
 router.post('/login', authController.login);
 
 router.post('/register', authController.register);
+router.post('/logout', authController.logout);
+
 
 
 
